--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/mobile.css">
     <title>Pod</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Chivo:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <img src="" alt="Logo de la marca">
         <div class="header_title_container">    
-            <h1>Publish your podcasts
-             everywhere.</h1>
+            <h1>PUBLISH YOUR PODCASTS 
+                EVERYWHERE.</h1>
         </div>
     
     </header>
@@ -42,7 +45,7 @@
                 </label>
                 
             </form>
-        </section>+
+        </section>
     </main>
 </body>
 </html>
