create of header

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Chivo:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <img src="" alt="Logo de la marca">
+    <header class="header_container">
+        <img src="./assets/desktop/logo.svg" alt="Logo de la marca">
         <div class="header_title_container">    
             <h1>PUBLISH YOUR PODCASTS 
-                EVERYWHERE.</h1>
+                <p>EVERYWHERE. </p></h1>
         </div>
     
     </header>
